--- a/estilo.css
+++ b/estilo.css
@@ -43,7 +43,7 @@ nav ul li a {
 }
 
 .banner {
-    background-image: url('casa\ luxuosa.jpg');
+    background-image: url('casa luxuosa.jpg');
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -100,3 +100,53 @@ footer {
     width: 100%;
     color: white;
   }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background: rgb(81, 77, 77);
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    width: 300px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.modal-content input {
+    width: 100%;
+    margin: 10px 0;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.modal-content button {
+    background: rgb(113, 94, 69);
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.modal-content button:hover {
+    background: #0056b3;
+}
+
+.close {
+    color: rgb(89, 28, 28);
+    cursor: pointer;
+    float: right;
+    font-size: 20px;
+}
